--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -1,8 +1,15 @@
 .loginComponent {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     padding-top: 200px;
     background-color: blueviolet;
 }
+
+#usernamePasswordLogin {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
