--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -2,14 +2,88 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding-top: 200px;
-    background-color: blueviolet;
+    height: 100vh;    
 }
 
 #usernamePasswordLogin {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    background-color: aqua;
+    width: 250px;
+    max-width: 100%;
+    padding: 25px;
 }
 
+#loginTitle {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
+    align-self: center;
+}
+
+.credentialsTitles {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9rem;
+    align-self: flex-start;
+}
+
+.credentialsWrapper {
+    position: relative;
+}
+
+.credentialsInputs {
+    border: none;
+    border-bottom: 1px solid black;
+    background-color: transparent;
+    width: 100%;    
+    text-indent: 25px;
+    padding-right: 0;
+    padding-left: 0;
+    padding-bottom: 10px;
+}
+
+.credentialsInputs::placeholder {
+    font-size: 0.9rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #303030;
+}
+
+.credentialsInputs:focus {
+    outline: none;
+}
+
+.credentialsIcon {
+    position: absolute;
+    top: 0;
+    left: 5px;
+    font-size: 0.9rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #303030;
+}
+
+#forgotPassword {
+    align-self: flex-end;
+    margin: 10px 0 20px 0;
+    font-size: 0.8rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: #303030;
+}
+
+#or {
+    align-self: center;
+}
+
+#googleLogin {
+    align-self: center;
+    width: 100%;
+}
+
+#googleLoginButton {
+    width: 100%;  
+}
+
+#signupLink {
+    margin-top: 40px;
+    align-self: center;
+}
