--- a/client/src/css/signup.css
+++ b/client/src/css/signup.css
@@ -1,8 +1,49 @@
 .signupComponent {
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100vh;    
+    background-color: #151515;
+}
+
+#signupWrapper {
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    padding-top: 200px;
-    background-color: yellowgreen;
+    background-color: #252525;
+    border-radius: 3px;
+    width: 250px;
+    max-width: 100%;
+    padding: 30px;
+    gap: 5px;
+}
+
+.signupTitle {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
+    align-self: center;
+    color: silver;
+    margin-bottom: 30px;
+}
+
+#signupButton {
+    padding: 7px 0;
+    cursor: pointer;
+    font-size: 0.9rem;
+    font-family: Arial, Helvetica, sans-serif;
+    border: none;
+    border-radius: 5px;
+    background-color: #662d91;
+    color: whitesmoke;
+    margin-top: 70px;
+}
+
+#alreadyUser {
+    margin-top: 20px;
+    margin-bottom: 5px;
+    align-self: center;
+    text-decoration: none;
+    color: #999999;
+    font-size: 0.9rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
