--- a/client/src/css/forgotPassword.css
+++ b/client/src/css/forgotPassword.css
@@ -1,4 +1,4 @@
-.signupComponent {
+#forgotPasswordComponent {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -6,7 +6,7 @@
     background-color: #151515;
 }
 
-#signupWrapper {
+#forgotPasswordWrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,10 +15,9 @@
     width: 250px;
     max-width: 100%;
     padding: 30px;
-    gap: 5px;
 }
 
-.signupTitle {
+.forgotPasswordTitle {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
     align-self: center;
@@ -26,7 +25,16 @@
     margin-bottom: 30px;
 }
 
-#signupButton {
+#enterEmailTitle {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9rem;
+    align-self: flex-start;
+    color: #808080;
+    margin-bottom: 30px;
+}
+
+#getVerificationCodeButton {
+    width: 100%;  
     padding: 7px 0;
     cursor: pointer;
     font-size: 0.9rem;
@@ -35,15 +43,5 @@
     border-radius: 5px;
     background-color: #662d91;
     color: whitesmoke;
-    margin-top: 70px;
-}
-
-.backToLogin {
-    margin-top: 20px;
-    margin-bottom: 5px;
-    align-self: center;
-    text-decoration: none;
-    color: #999999;
-    font-size: 0.9rem;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 30px;
 }
