--- a/client/src/css/restorePassword.css
+++ b/client/src/css/restorePassword.css
@@ -4,8 +4,62 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: #151515;
+}
+
+#restorePasswordWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #252525;
+    border-radius: 3px;
+    width: 250px;
+    max-width: 100%;
+    padding: 30px;
+}
+
+.resetPasswordTitle {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
+    align-self: center;
+    color: silver;
+    margin-bottom: 30px;
+}
+
+#enterReceivedCode {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9rem;
+    align-self: flex-start;
+    color: #808080;
+    margin-bottom: 30px;
+}
+
+#submitCodeButton {
+    width: 100%;  
+    padding: 7px 0;
+    cursor: pointer;
+    font-size: 0.9rem;
+    font-family: Arial, Helvetica, sans-serif;
+    border: none;
+    border-radius: 5px;
+    background-color: #662d91;
+    color: whitesmoke;
+    margin-top: 30px;
 }
 
 #restorePassword {
     display: none;
+}
+
+#resetPasswordButton {
+    width: 100%;  
+    padding: 7px 0;
+    cursor: pointer;
+    font-size: 0.9rem;
+    font-family: Arial, Helvetica, sans-serif;
+    border: none;
+    border-radius: 5px;
+    background-color: #662d91;
+    color: whitesmoke;
+    margin-top: 30px;
 }
