--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -17,12 +17,42 @@
     padding: 30px;
 }
 
+#loginTitleWrapper {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
 .loginTitle {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
     align-self: center;
     color: silver;
     margin-bottom: 30px;
+}
+
+.pokeball {
+    background-color: #e60023;
+    border-bottom: 20px solid whitesmoke;
+    height: 30px;
+    width: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    position: relative;
+    margin-bottom: 15px;
+}
+
+.blackCircle {
+    position: absolute;
+    height: 5px;
+    width: 5px;
+    top: 24px;
+    background-color: whitesmoke;
+    border: 3px solid #303030;
+    border-radius: 50%;
 }
 
 .credentialsTitles {
