--- a/client/src/css/responseMessage.css
+++ b/client/src/css/responseMessage.css
@@ -1,30 +1,36 @@
 #responseMessage {    
     position: absolute;
-    top: 20px;
+    top: 25px;
 }
 
 #waitingResponse {
-    background-color: blue;
-    width: 150px;
-    height: 20px;
+    background-color: #3457D5;
     color: whitesmoke;
     display: none;
     justify-content: space-evenly;
+    font-size: 0.9rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 5px 20px;
 }
 
 #positiveResponse {
-    width: 150px;
-    height: 20px;
-    background-color: green;
+    background-color: #228B22;
     color: whitesmoke;
     display: none;
     justify-content: space-evenly;
+    gap: 10px;
+    font-size: 0.9rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 5px 20px;
 }
 
 #negativeResponse {
-    height: 20px;
-    background-color: red;
+    background-color: #E62020;
     color: whitesmoke;
     display: none;
     justify-content: space-evenly;
+    gap: 10px;
+    font-size: 0.9rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 5px 20px;
 }
